# screen_control

./: .gitignore  .mcp-oauth-credentials.json  .mcp.json  CLAUDE.md  ai.md  build-linux.sh  package-lock.json  settings.md  setup.md  version.json
.github/workflows/: build-windows-msi.yml  ci.yml  quality-checks.yml  release.yml
builds/2.0.5/ScreenControl.app/Contents/: Info.plist
builds/2.0.5/ScreenControl.app/Contents/MacOS/: ScreenControl
builds/2.0.5/ScreenControl.app/Contents/Resources/: AppIcon.icns  Assets.car  debug-config.json
builds/2.0.5/ScreenControl.app/Contents/_CodeSignature/: CodeResources
docs/: windows-setup.md
extension/chrome/: background.js
macos/ScreenControl/: AppDelegate.h  AppDelegate.m  Info.plist  ServiceClient.h  ServiceClient.m
macos/ScreenControl.xcodeproj/: project.pbxproj
service/: CMakeLists.txt
service/docker/: Dockerfile.linux
service/include/: platform.h
service/install/macos/: com.knws.screencontrol.service.plist
service/src/control_server/: command_dispatcher.cpp  command_dispatcher.h  websocket_client.cpp  websocket_client.h  websocket_client_windows.cpp
service/src/platform/linux/: main_linux.cpp
service/src/platform/macos/: main_macos.cpp
service/src/platform/windows/: main_windows.cpp
service/src/screen/: screen_stream.cpp
service/src/server/: http_server.cpp
service/src/tools/: shell_tools.cpp
service/src/update/: update_linux.cpp  update_macos.cpp  update_manager.cpp  update_manager.h  update_windows.cpp
web/: package-lock.json  package.json  server.ts
web/prisma/: schema.prisma  seed-job-types.ts
web/public/: robots.txt  sitemap.xml
web/src/app/: layout.tsx
web/src/app/api/agents/[id]/permissions/: route.ts
web/src/app/api/jobs/: route.ts
web/src/app/api/jobs/[id]/: route.ts
web/src/app/api/jobs/[id]/trigger/: route.ts
web/src/app/api/jobs/runs/[id]/: route.ts
web/src/app/api/jobs/types/: route.ts
web/src/app/api/master/agents/: route.ts
web/src/app/api/stream/: route.ts
web/src/app/api/terminal/: route.ts
web/src/app/api/tools/: route.ts
web/src/app/api/tools/[id]/: route.ts
web/src/app/api/tools/seed/: route.ts
web/src/app/api/transfers/: route.ts
web/src/app/api/transfers/[id]/: route.ts
web/src/app/api/updates/download/[platform]/[arch]/[version]/: route.ts
web/src/app/api/updates/versions/: route.ts
web/src/app/dashboard/: layout.tsx
web/src/app/dashboard/agents/: page.tsx
web/src/app/dashboard/agents/[id]/: page.tsx
web/src/app/dashboard/downloads/: page.tsx
web/src/app/dashboard/jobs/: page.tsx
web/src/app/dashboard/settings/: page.tsx
web/src/app/dashboard/terminal/[agentId]/: page.tsx
web/src/app/mcp/[uuid]/: route.ts
web/src/lib/: rate-limit.ts
web/src/lib/control-server/: agent-registry.ts  db-service.ts  file-transfer-manager.ts  index.ts  master-session-manager.ts  stream-session-manager.ts  stream-websocket-handler.ts  terminal-session-manager.ts  tool-service.ts  types.ts  websocket-handler.ts
web/src/lib/job-scheduler/: cron-parser.ts  executor.ts  index.ts
web/src/lib/llm/providers/: claude-code-managed.ts
windows/ScreenControlTray/: ScreenControlTray.csproj  SettingsForm.cs  WebSocketClient.cs
